// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 0.3rem;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #17a3a5;
  color: white;
  border-color: #17a3a5;
}

.c1:hover {
  cursor: pointer;
  background-color: #135f61;
  color: white;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #135f61;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #135f61;
  color: white;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
  type="button"
>
  <div
    class="c2"
  >
    Hello world
  </div>
</button>
`;

exports[`it works with anchor 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 0.3rem;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: white;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #135f61;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<a
  class="c0 c1"
  href="https://google.com"
  target="_blank"
>
  <div
    class="c2"
  >
    Hello world
  </div>
</a>
`;

exports[`it works with icon 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 0.3rem;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: white;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #135f61;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
  type="button"
>
  <div
    class="c2"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-circle "
      data-icon="circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style="margin-right: 0.5rem;"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256z"
        fill="currentColor"
      />
    </svg>
    Hello world
  </div>
</button>
`;

exports[`it works with loading 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 0.3rem;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: white;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #135f61;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  position: absolute;
  top: calc(50% - 0.375rem);
  right: 0;
  left: 0;
  width: 100%;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c4 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  border-radius: 0.6rem;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  border-style: solid;
  border-radius: 0.6rem;
  border-width: 1px;
  width: 100%;
  height: 0.75rem;
  background-color: #fafafa;
  border-color: #d4d4d4;
}

.c6 {
  position: relative;
  top: -1px;
  left: 0;
  border-radius: 0.6rem;
  width: 1.5rem;
  height: 0.75rem;
  background-color: #d4d4d4;
}

.c7 {
  -webkit-animation: igSzjp;
  animation: igSzjp;
  -webkit-transform: translateX(50%);
  -ms-transform: translateX(50%);
  transform: translateX(50%);
  left: -50%;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-duration: 0.6s;
  animation-duration: 0.6s;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.68,-0.9,0.32,1.9);
  animation-timing-function: cubic-bezier(0.68,-0.9,0.32,1.9);
}

<button
  class="c0 c1"
  type="button"
>
  <div
    class="c2"
  >
    Hello world
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6 c7"
        />
      </div>
    </div>
  </div>
</button>
`;

exports[`it works with size large 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 0.3rem;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: white;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #135f61;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
  type="button"
>
  <div
    class="c2"
  >
    Hello world
  </div>
</button>
`;

exports[`it works with size medium 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 0.875rem;
  font-weight: 500;
  border-radius: 0.3rem;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  background-color: white;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #135f61;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
  type="button"
>
  <div
    class="c2"
  >
    Hello world
  </div>
</button>
`;

exports[`it works with size small 1`] = `
.c0 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
}

.c0 > p {
  margin-bottom: 0.5rem;
}

.c0 > p:last-child {
  margin-bottom: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  display: inline-block;
  position: relative;
  font-size: 0.75rem;
  font-weight: 500;
  border-radius: 0.3rem;
  border-width: 2px;
  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  padding-top: 0;
  padding-bottom: 0;
  background-color: white;
  color: #17a3a5;
  border-color: #d4d4d4;
}

.c1:hover {
  cursor: pointer;
  background-color: #fafafa;
  color: #135f61;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #fafafa;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #fafafa;
  color: #292B3E;
}

.c2 {
  opacity: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<button
  class="c0 c1"
  type="button"
>
  <div
    class="c2"
  >
    Hello world
  </div>
</button>
`;
